Fix bug: 1) correct visualization of the hamburger menu on small screens 2) super position of the 'sing up' and 'features' section 3) size of the team cards

--- a/front/css/styles.css
+++ b/front/css/styles.css
@@ -30,11 +30,6 @@
 
 /*sigUp*/
 
-#sign-up h1 {
-  text-align: center;
-  font-size: 2.75rem;
-}
-
 #sign-up .row {
   height: 70vh;
 }
@@ -44,9 +39,6 @@
   color: #f7f7f7;
   box-shadow: inset 0 0 10px 0 #41c1ba;
   border-radius: 0 0 50px 0;
-}
-#sign-up .container {
-  margin-top: 10%;
 }
 
 #form-sing-up input,
